--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
-    "@angular/forms": "^17.1.0",
+    "@angular/forms": "^17.1.3",
+    "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "webextension-polyfill": "^0.10.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.2",
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.0",
+    "@types/chrome": "^0.0.260",
     "@types/jasmine": "~5.1.0",
+    "@types/webextension-polyfill": "^0.10.7",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
