--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "chrome-types": "^0.1.265",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "webextension-polyfill": "^0.10.0",
@@ -28,7 +29,7 @@
     "@angular-devkit/build-angular": "^17.1.2",
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.0",
-    "@types/chrome": "^0.0.260",
+    "@types/chrome": "^0.0.35",
     "@types/jasmine": "~5.1.0",
     "@types/webextension-polyfill": "^0.10.7",
     "jasmine-core": "~5.1.0",
