--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,8 +4,8 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
-    ]
+      "jasmine",
+    ],
   },
   "include": [
     "src/**/*.spec.ts",
