--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,10 +2,10 @@
   "manifest_version": 3,
   "browser_specific_settings": {
     "gecko": {
-      "id": "seifbouafia340@gmail.com"
+      "id": "teberramzi@gmail.com"
     }
   },
-  "name": "Mon Extension de Remplissage ",
+  "name": "Extension_de_Remplissage",
   "version": "1.0",
   "description": "Une extension pour remplir automatiquement les formulaires",
   "permissions": [
