--- a/.github/workflows/mazilla-addon-deploy.yml
+++ b/.github/workflows/mazilla-addon-deploy.yml
@@ -5,15 +5,9 @@ on:
     tags:
       - 'v*'
 
-env:
-  NODE_VERSION: '18'
-  PROJECT_NAME: autofill-form
-
 jobs:
-  Build:
+  build-and-submit:
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.get_version.outputs.VERSION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -21,7 +15,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: '18'
 
       - name: Install dependencies
         run: npm ci
@@ -29,35 +23,13 @@ jobs:
       - name: Build extension
         run: npm run build
 
-      - name: Get version from tag
-        id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
       - name: Create ZIP file
-        run: |
-          cd dist/grat-extension/browser
-          zip -r ../../../${{ env.PROJECT_NAME }}-${{ steps.get_version.outputs.VERSION }}.zip .
+        run: zip -r extension.zip . -x '*.git*'
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: extension
-          path: ${{ env.PROJECT_NAME }}-${{ steps.get_version.outputs.VERSION }}.zip
-
-  Firefox:
-    needs: Build
-    name: Submit to Firefox Add-ons
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: extension
-
-      - name: Sign and submit to Firefox Add-ons
-        run: |
-          unzip ${{ env.PROJECT_NAME }}-${{ needs.Build.outputs.version }}.zip -d extension_dir
-          npm install --global web-ext
-          web-ext sign --channel listed --source-dir ./extension_dir
+      - name: Submit to Mozilla Add-ons
         env:
           WEB_EXT_API_KEY: ${{ secrets.AMO_JWT_ISSUER }}
           WEB_EXT_API_SECRET: ${{ secrets.AMO_JWT_SECRET }}
+        run: |
+          npm install --global web-ext
+          web-ext sign --source-dir ./ --artifacts-dir ./web-ext-artifacts/
