--- a/.github/workflows/mazilla-addon-deploy.yml
+++ b/.github/workflows/mazilla-addon-deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm run build # Assurez-vous d'avoir une commande de build définie dans votre package.json
 
       - name: Package extension
-        run: zip -r extension.zip dist
+        run: zip -r extension.zip dist/browser
 
       - name: Deploy to Mozilla Add-ons
         uses: trmcnvn/firefox-addon@v1
