--- a/.github/workflows/mazilla-addon-deploy.yml
+++ b/.github/workflows/mazilla-addon-deploy.yml
@@ -23,11 +23,7 @@ jobs:
         run: npm run build # Assurez-vous d'avoir une commande de build définie dans votre package.json
 
       - name: Package extension
-        run: |
-          if [ ! -f "dist/grat-extension/browser/manifest.json" ]; then
-            echo "Error: manifest.json not found in the build output directory."
-            exit 1
-          fi
+        run: zip -r extension.zip . -i dist/browser
 
       - name: Deploy to Mozilla Add-ons
         uses: trmcnvn/firefox-addon@v1
