--- a/.github/workflows/mazilla-addon-deploy.yml
+++ b/.github/workflows/mazilla-addon-deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: ls -R dist
 
       - name: Package extension
-        run: zip -r extension.zip dist
+        run: zip -r extension.zip dist/grat-extension/browser
 
       - name: Deploy to Mozilla Add-ons
         uses: trmcnvn/firefox-addon@v1
