--- a/.github/workflows/mazilla-addon-deploy.yml
+++ b/.github/workflows/mazilla-addon-deploy.yml
@@ -2,8 +2,8 @@ name: Deploy to Mozilla Add-ons
 
 on:
   push:
-    branches:
-      - ramzi-deployement
+    branches: [ ramzi-deployement ]
+
     tags:
       - 'v*'
 
