--- a/.github/workflows/mazilla-addon-deploy.yml
+++ b/.github/workflows/mazilla-addon-deploy.yml
@@ -1,40 +1,36 @@
-name: Deploy to Mozilla Add-ons
+name: Deploy Firefox Extension
 
 on:
   push:
     branches: [ deploy-on-addons ]
 
 jobs:
-  build-and-submit:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build extension
+      - name: Build the extension
         run: npm run build
 
-      - name: Debug build output
-        run: ls -R dist
-
-      - name: Package extension
+      - name: Package the extension
         run: |
-          cd dist/grat-extension/browser
-          zip -r ../../../../extension.zip .
+          cd dist/grat-extension
+          zip -r ../../extension.zip .
 
-      - name: Deploy to Mozilla Add-ons
-        uses: trmcnvn/firefox-addon@v1
+      - name: Upload the extension
+        uses: mozilla/web-ext-action@v2
         with:
-          uuid: 'teberramzi@gmail.com'
-          xpi: extension.zip
-          manifest: dist/grat-extension/browser/manifest.json
-          api-key: ${{ secrets.AMO_JWT_ISSUER }}
-          api-secret: ${{ secrets.AMO_JWT_SECRET }}
+          api-key: ${{ secrets.AMO_API_KEY }}
+          api-secret: ${{ secrets.AMO_API_SECRET }}
+          source-dir: dist/grat-extension
+          artifact: extension.zip
+          id: 'teberramzi@gmail.com'
