--- a/.github/workflows/automate-Firefox-deployment.yml
+++ b/.github/workflows/automate-Firefox-deployment.yml
@@ -1,6 +1,7 @@
 name: Release Autofill-Form Extension
 on:
-  workflow_dispatch:
+  push:
+    branches: [ ramzi-deployement ]
 
 env:
   DIRECTORY: dist
