--- a/.github/workflows/automate-Firefox-deployment.yml
+++ b/.github/workflows/automate-Firefox-deployment.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Create version
         id: create_version
         run: |
-          VERSION=$(date +'%Y.%m.%d')
+          VERSION=$(date +'%Y.%m.%d' | sed 's/\.0/./g')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
       - name: List files in dist directory
         run: ls -R $DIRECTORY
@@ -39,9 +39,6 @@ jobs:
             echo "Error: $MANIFEST_PATH not found"
             exit 1
           fi
-        env:
-          DIRECTORY: dist
-          PROJECT_NAME: autofill-form
       - name: Package extension
         run: |
           cd $DIRECTORY
