--- a/.github/workflows/automate-Firefox-deployment.yml
+++ b/.github/workflows/automate-Firefox-deployment.yml
@@ -25,7 +25,15 @@ jobs:
       - name: Create version
         id: create_version
         run: |
-          VERSION=$(date +'%Y.%m.%d' | sed 's/\.0/./g')
+          VERSION_FILE="version.txt"
+          if [ -f "$VERSION_FILE" ]; then
+            VERSION=$(cat $VERSION_FILE)
+            echo "Using existing version: $VERSION"
+          else
+            VERSION="1.0.0"
+            echo "Setting initial version: $VERSION"
+          fi
+          echo "$VERSION" > $VERSION_FILE
           echo "version=$VERSION" >> $GITHUB_OUTPUT
       - name: List files in dist directory
         run: ls -R $DIRECTORY
