--- a/.github/workflows/automate-Firefox-deployment.yml
+++ b/.github/workflows/automate-Firefox-deployment.yml
@@ -1,10 +1,12 @@
 name: Release Autofill-Form Extension
+
 on:
   workflow_dispatch:
   push:
     branches: [ 1-ramzi-deployement ]
     tags:
-      - 'v*' # Déclenche le workflow pour les tags commençant par 'v'
+      - 'v*' # Trigger the workflow for tags starting with 'v'
+
 env:
   DIRECTORY: dist
   PROJECT_NAME: autofill-form
@@ -29,7 +31,15 @@ jobs:
           VERSION_FILE="version.txt"
           if [ -f "$VERSION_FILE" ]; then
             VERSION=$(cat $VERSION_FILE)
-            echo "Using existing version: $VERSION"
+            # Extract the major, minor, and patch parts of the version
+            IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
+            MAJOR=${VERSION_PARTS[0]}
+            MINOR=${VERSION_PARTS[1]}
+            PATCH=${VERSION_PARTS[2]}
+            # Increment the patch version
+            PATCH=$((PATCH + 1))
+            VERSION="$MAJOR.$MINOR.$PATCH"
+            echo "Incrementing version to: $VERSION"
           else
             VERSION="1.0.0"
             echo "Setting initial version: $VERSION"
@@ -42,7 +52,7 @@ jobs:
         run: |
           MANIFEST_PATH="$DIRECTORY/grat-extension/browser/manifest.json"
           if [ -f "$MANIFEST_PATH" ]; then
-            sed -i 's/"version":.*/"version": "${{ steps.create_version.outputs.version }}",/' "$MANIFEST_PATH"
+            sed -i 's/"version":.*/"version": "'${{ steps.create_version.outputs.version }}'",/' "$MANIFEST_PATH"
             echo "Updated manifest.json version to ${{ steps.create_version.outputs.version }}"
           else
             echo "Error: $MANIFEST_PATH not found"
