--- a/.github/workflows/automate-Firefox-deployment.yml
+++ b/.github/workflows/automate-Firefox-deployment.yml
@@ -26,43 +26,26 @@ jobs:
       - name: Create version
         id: create_version
         run: |
-          # Define the path to the version file
-          VERSION_FILE="version.txt"
-
-          # Check if the version file exists
-          if [ -f "$VERSION_FILE" ]; then
-            # Read the current version from the file
-            VERSION=$(cat $VERSION_FILE)
-
-            # Split the version into major, minor, and patch
-            IFS='.' read -r -a VERSION_PARTS <<< "$VERSION"
-            MAJOR=${VERSION_PARTS[0]}
-            MINOR=${VERSION_PARTS[1]}
+          # Read the current version from manifest.json
+          MANIFEST_PATH="$DIRECTORY/grat-extension/browser/manifest.json"
+          if [ -f "$MANIFEST_PATH" ]; then
+            CURRENT_VERSION=$(jq -r '.version' "$MANIFEST_PATH")
+            IFS='.' read -r -a VERSION_PARTS <<< "$CURRENT_VERSION"
             PATCH=${VERSION_PARTS[2]}
-
-            # Increment the patch version by 1
             PATCH=$((PATCH + 1))
-            VERSION="$MAJOR.$MINOR.$PATCH"
-
-            echo "Incrementing version to: $VERSION"
+            NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.$PATCH"
+            echo "New version: $NEW_VERSION"
           else
-            # Initialize the version if the file does not exist
-            VERSION="1.0.0"
-            echo "Setting initial version: $VERSION"
+            echo "Error: manifest.json not found"
+            exit 1
           fi
-
-          # Save the new version to the version file
-          echo "$VERSION" > $VERSION_FILE
-
-          # Output the version to GitHub Actions
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
       - name: List files in dist directory
         run: ls -R $DIRECTORY
       - name: Update manifest.json
         run: |
-          MANIFEST_PATH="$DIRECTORY/grat-extension/browser/manifest.json"
           if [ -f "$MANIFEST_PATH" ]; then
-            sed -i 's/"version":.*/"version": "'${{ steps.create_version.outputs.version }}'",/' "$MANIFEST_PATH"
+            jq ".version = \"${{ steps.create_version.outputs.version }}\"" "$MANIFEST_PATH" > "$MANIFEST_PATH.tmp" && mv "$MANIFEST_PATH.tmp" "$MANIFEST_PATH"
             echo "Updated manifest.json version to ${{ steps.create_version.outputs.version }}"
           else
             echo "Error: $MANIFEST_PATH not found"
