--- a/.github/workflows/automate-Firefox-deployment.yml
+++ b/.github/workflows/automate-Firefox-deployment.yml
@@ -1,63 +1,43 @@
 name: Release Autofill-Form Extension
+
 on:
   workflow_dispatch:
 
 env:
-  DIRECTORY: dist
   PROJECT_NAME: autofill-form
 
 jobs:
-  Build:
+  build-and-submit:
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.create_version.outputs.version }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version-file: package.json
           cache: npm
-      - run: npm ci
-      - name: Build extension
-        run: npm run build
-      - name: Create version
-        id: create_version
+
+      - name: Install dependencies and build
         run: |
-          VERSION=$(date +'%Y.%m.%d')
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-      - name: List files in dist directory
-        run: ls -R $DIRECTORY
-      - name: Update manifest.json
+          npm ci
+          npm run build
+
+      - name: Increment version and update manifest
+        id: version
         run: |
-          MANIFEST_PATH="$DIRECTORY/grat-extension/browser/manifest.json"
-          if [ -f "$MANIFEST_PATH" ]; then
-            sed -i 's/"version":.*/"version": "${{ steps.create_version.outputs.version }}",/' "$MANIFEST_PATH"
-            echo "Updated manifest.json version to ${{ steps.create_version.outputs.version }}"
-          else
-            echo "Error: $MANIFEST_PATH not found"
-            exit 1
-          fi
-        env:
-          DIRECTORY: dist
-          PROJECT_NAME: autofill-form
+          MANIFEST_PATH="dist/grat-extension/browser/manifest.json"
+          CURRENT_VERSION=$(jq -r '.version' "$MANIFEST_PATH")
+          IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
+          ((VERSION_PARTS[2]++))
+          NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
+          echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          jq ".version = \"$NEW_VERSION\"" "$MANIFEST_PATH" > temp.json && mv temp.json "$MANIFEST_PATH"
+          echo "Version incremented from $CURRENT_VERSION to $NEW_VERSION"
+
       - name: Package extension
         run: |
-          cd $DIRECTORY
-          zip -r ../$PROJECT_NAME-${{ steps.create_version.outputs.version }}.zip .
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: extension
-          path: ${{ env.PROJECT_NAME }}-${{ steps.create_version.outputs.version }}.zip
+          cd dist
+          zip -r ../${{ env.PROJECT_NAME }}-${{ steps.version.outputs.version }}.zip .
 
-  Firefox:
-    needs: Build
-    name: Submit to Firefox Add-ons
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: extension
       - name: Sign and submit to Firefox Add-ons
         run: npx web-ext sign --channel listed --source-dir .
         env:
